[package]
name = "strongly"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/cloneable/strongly"
exclude = [".cargo/", ".github/", ".gitignore", "rustfmt.toml"]

[lib]
proc-macro = true

[features]
default = ["std"]
std = []

[dependencies]
proc-macro2 = { version = "1", default-features = false, features = ["proc-macro"] }
quote = { version = "1", default-features = false, features = ["proc-macro"] }
syn = { version = "2", default-features = false, features = ["full", "proc-macro", "parsing"] }
