[package]
name = "strongly"
version = "0.0.1"
description = "[WIP] A proc macro to create strongly-typed primitives"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloneable/strongly"
exclude = [".cargo/", ".github/", ".gitignore", "rustfmt.toml"]
edition = "2021"
rust-version = "1.58"

[lib]
proc-macro = true

[features]
default = ["std"]
std = []

[dependencies]
proc-macro2 = { version = "1", default-features = false, features = ["proc-macro"] }
quote = { version = "1", default-features = false, features = ["proc-macro"] }
syn = { version = "2", default-features = false, features = ["full", "proc-macro", "parsing"] }
