[workspace]
members = [".", "e2e-tests/*"]
resolver = "2"

[package]
name = "strongly"
version = "0.0.2"
description = "A proc macro to create strongly-typed primitives"
authors = ["Folke <folke@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["data-structures", "rust-patterns"]
keywords = []
repository = "https://github.com/cloneable/strongly"
exclude = [".cargo/", ".github/", ".gitignore", "rustfmt.toml", "tests/", "e2e-tests/"]
edition = "2021"
rust-version = "1.66"

[lib]
proc-macro = true

[features]
default = ["std"]
full = ["std", "convert", "deref", "serde"]
std = []
convert = []
deref = []
serde = []

[dependencies]
proc-macro2 = { version = "1", default-features = false, features = ["proc-macro"] }
quote = { version = "1", default-features = false, features = ["proc-macro"] }
syn = { version = "2", default-features = false, features = ["proc-macro", "full", "derive", "parsing", "printing"] }

[dev-dependencies]
paste = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
